1.1.1
------------------------------------------------------------------------------------------------------------------------

ADDONS:
	- Fixed: Awstats - Cron task is not running (dynamic mode)

ENGINE:
	- Added: onLoadTemplate event in all server implementations
	- Fixed: DNS sub templates must be passed-in to event listeners

GUI:
	- Fixed: jQuery library included twice in simple layout
	- Fixed: Wrong events triggered in client/profile.php

PLUGINS:
	- Changed: iMSCP_Plugin_Manager::updatePluginInfo() method is now public
	- Fixed: Plugin Store link
	- Updated: Plugin API to version 0.2.5 (changes are backward compatible)

SETUP:
	- Changed: imscp group is now allowed to read all files from i-MSCP configuration directory

VENDOR:
	- Updated: DataTables to version 1.9.4

Tickets:
	- Fixed #1014: Bug - Link for "cancel" in Reseller - edit Domain is wrong

------------------------------------------------------------------------------------------------------------------------
1.1.0
------------------------------------------------------------------------------------------------------------------------

2014-02-03: Laurent Declercq
	- RELEASE i-MSCP 1.1.0

ADDONS:
	- Added: Awstats - logresolvemerge.pl script for last rotated log processing
	- Fixed: Awstats - _addAwstatsSection() event listener is registered too many times
	- Fixed: Awstats - Avoid concurrent processes of the awstats_updateall.pl script
	- Fixed: Awstats - Error: Couldn't open server log file... (missing files are now ignored silently)
	- Fixed: Awstats - Traffic data are lost when logs are rotated
	- Fixed: Roundcube|PhpMyAdmin installers - Ensure that database tables exist (recovery case)
	- Fixed: Roundcube - Wrong SQL server host when using remote server
	- Fixed: PhpMyAdmin 4.1.0 is only compatible with MySQL Server version 5.5 and newer
	- Removed: Awstats - logrotate entry (no longer needed)

CONFIG:
	- Changed: Tools access is now provided only through the panel domain