@@ -11,6 +11,7 @@ ADDONS:
 ENGINE:
 	- Added: onLoadTemplate event in all server implementations
 	- Fixed: DNS sub templates must be passed-in to event listeners
+	- Fixed: Domain owner unique identifier must be passed-in to related servers and addons
 
 GUI:
 	- Fixed: jQuery library included twice in simple layout
